tests/reference/asr-generics_error_02-d614928.stderr
semantic error: No applicable argument to the restriction zero
  --> tests/errors/generics_error_02.py:37:7
   |
37 | print(mean(["a","b","c"], add=add_string, div=div_string))
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 


Note: Please report unclear or confusing messages as bugs at
https://github.com/lcompilers/lpython/issues.
